# mosaic

./: .gitignore  .gitmodules  .tags  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp  bench.h  bench_all.sh  bench_blas.cpp  bench_blockSparse_blas.cpp  bench_blockSparse_gsl.cpp  bench_blockSparse_taco.cpp  bench_blockSparse_tblis.cpp  bench_blockedSparse4T_5_bug_gsl.cpp  bench_blockedSparse4T_5_bug_mkl.cpp  bench_blockedSparse4T_5_cblas.cpp  bench_blockedSparse4T_5_gsl.cpp  bench_blockedSparse4T_5_mkl.cpp  bench_blockedSparse4T_5_taco.cpp  bench_blockedSparse4T_cblas.cpp  bench_blockedSparse4T_gsl.cpp  bench_blockedSparse4T_mkl.cpp  bench_blockedSparse4T_taco.cpp  bench_blockedSparse4T_tblis.cpp  bench_coo_csr_spMM_mkl.cpp  bench_coo_csr_spMM_taco_coo.cpp  bench_coo_csr_spMM_taco_csr.cpp  bench_dot.cpp  bench_dot_blas.cpp  bench_dot_gsl.cpp  bench_dot_taco.cpp  bench_dot_tblis.cpp  bench_gemv_blas.cpp  bench_gemv_gsl.cpp  bench_gemv_mkl.cpp  bench_gemv_taco.cpp  bench_gemv_tblis.cpp  bench_mm.cpp  bench_mm_add_bug_mkl.cpp  bench_mm_add_mkl.cpp  bench_mm_add_stardust.cpp  bench_mm_add_taco.cpp  bench_mm_blas.cpp  bench_mm_gsl.cpp  (+77 more)
bench/bench-scripts/: Makefile  mosaic_env_var.sh
bench/blockSparse/: filename_130317.err  filename_130317.txt  slurm_bench_blockSparse.sh
bench/blockedSparse_4T/: slurm_sddmm_var_sparse_bench.sh
bench/coo_csr_bench/: slurm_sddmm_bench.sh
bench/dot/: blas  dot_bench.sh  slurm_dot_bench.sh  taco  tblis
bench/gemv/: slurm_gemv_bench.sh
bench/gemv_raw/: cblas-gemv-raw  cblas-gemv-raw.c  cuda-gemv-raw  cuda-gemv-raw.c  (+12 more)
(+418 files in other folders)
